tests/baselines/reference/project/nestedDeclare/node/nestedDeclare.errors.txt
lib.es5.d.ts(48,21): error TS6054: File 'lib.es2009.uint16array' has an unsupported extension. The only supported extensions are '.ts', '.tsx', '.d.ts', '.cts', '.d.cts', '.mts', '.d.mts'.


==== consume.ts (0 errors) ====
    declare module "math" 
    {
        import blah = require("blah");
        export function baz();
    }
    
    declare module "blah"
    {
    }
    